fixed scrollbar in chrome partner section
Former-commit-id: 7ff3d57675ca27ed0ca01a31692295f8b693bf64 [formerly ab8c07a97ea4e8fd5ead6a438ce7d6228c595c6b]
Former-commit-id: 3838eded7fdfcdbc1e2e5c1817d6b35e9f50ed7a

--- a/src/styles/Home/partner.module.scss
+++ b/src/styles/Home/partner.module.scss
@@ -45,6 +45,10 @@
     &::-webkit-scrollbar {
       display: none;
     }
+    ::-webkit-scrollbar {
+      width: 0; /* Remove scrollbar space */
+      background: transparent; /* Optional: just make scrollbar invisible */
+    }
     .img {
       width: 20vw;
       min-width: 300px;
